[package]
name = "rng_f"
description = "Simple program to generate a matrix and write it into a file"
version = "0.3.1"
repository = "https://github.com/Kattair/rng_f"
license = "MIT"
authors = ["Kattair <martin.kustra@tutanota.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.1.4", features = ["derive"] }
thiserror = "1.0.38"
