[package]
name = "rng_f"
description = "Simple program to generate a matrix and write it into a file"
version = "0.5.0"
repository = "https://github.com/Kattair/rng_f"
license = "MIT"
authors = ["Kattair <martin.kustra@tutanota.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rng_f"

[dependencies]
rand = { version = "0.8", features = ["std_rng"]}
clap = { version = "4", features = ["derive", "string"] }
thiserror = "1"
itoa = "1"
colored = "2"
